# my_bot_ai_v1

./: .gitignore  README.md
src/smart_t_ai_v1/: CMakeLists.txt  package.xml
src/smart_t_ai_v1/config/: smart_trolley_drive.rviz  view_bot.rviz
src/smart_t_ai_v1/description/: SMART-TROLLEY_V4.gazebo  SMART-TROLLEY_V4.trans  SMART-TROLLEY_V4_ai.xacro  SMART-TROLLEY_V5.gazebo  SMART-TROLLEY_V5.trans  SMART-TROLLEY_V5.xacro  camera.xacro  gazebo_control_trolley.xacro  lidar.xacro  materials.xacro  robot.urdf.xacro  robot_core.urdf.xacro
src/smart_t_ai_v1/launch/: launch_sim.launch.py  rsp.launch.py  rviz.launch.py
src/smart_t_ai_v1/meshes/: RR-RUEDA_link_1.stl  base_link.stl  camera_link_1.stl  left_wheel_1_1.stl  right_wheel_1_1.stl  rueda_link_2.stl
src/smart_t_ai_v1/worlds/: empty.sdf
